--- a/0a_Abschlussbericht/src/bibfile.bib
+++ b/0a_Abschlussbericht/src/bibfile.bib
@@ -16,6 +16,13 @@
   author = {Walter Fichter and Werner Grimm}
 }
 
+@booklet{Grimm2017,
+	title = {Skriptum Digitale Regelung und Filterung},
+	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
+	year = {2017},
+	author = {Werner Grimm}
+}
+
 @BOOK{Johnson1994,
   title = {Helicopter theory},
   publisher = {Dover Publications},
