--- a/0a_Abschlussbericht/src/einleitung.tex
+++ b/0a_Abschlussbericht/src/einleitung.tex
@@ -1,1 +1,4 @@
 \chapter{Einleitung}
+
+gegeben: 	$ x(t) $, $ u(t) $ aus Flugmessdaten, Struktur der lin. Modelle (Längs- und Seitenbewegung)
+gesucht: 	Parameter der lin. Modelle
