--- a/0a_Abschlussbericht/src/zusammenfassung.tex
+++ b/0a_Abschlussbericht/src/zusammenfassung.tex
@@ -1,1 +1,9 @@
 \chapter{Zusammenfassung und Ausblick}
+- Datenvorbereitung sehr wichtig und großer Teil der Arbeit\\
+- Matrix-LSQ sehr schnell und einfach zu implementieren, ABER flugmechanisch nur bedingt sinnvoll\\
+- Frequenzbereich nur sinnvoll bei passendem Eingangssignal\\
+\\
+- generell: Datennormalisierung (Skalierung mit Maximalwerten => Absolutwerte in gleicher Größenordnung
+) bzw. -gewichtung\\
+- Zeitbereich: nichtlineare Modellbildung\\
+- Frequenzbereich: Equation Error-Methode, kombinierte Methode (Output Error + Equation Error)
