--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -20,9 +20,9 @@ geodätischen Geschwindigkeiten in $ z $- und $ x $-Richtung berechnet.
 \end{equation}
 
 \cref{tab:messgroessen} zeigt eine Übersicht über die verwendeten Messsignale aus den Originaldateien. Zu beachten ist, dass 
-in den Originaldaten für sämtliche Steueruder jeweils ein eigenes Signal für das linke sowie das rechte Ruder vorliegt (im 
-Fall des Querrruders sogar zwei Signale je Seite). Im hier betrachteten Bereich sind diese Signale jedoch zu jedem Zeitpunkt 
-gleich, weshalb die Verwendung eines Verlaufs ausreicht.
+in den Originaldaten für das Höhenruder jeweils ein eigenes Signal für das linke sowie das rechte 
+Ruder vorlieg, im Falle es Querruders sogar zwei je Seite. Im betrachteten Bereich sind diese Signale jedoch zu jedem 
+Zeitpunkt  gleich, weshalb die Verwendung eines Verlaufs je Steuerruder ausreicht.
 
 \begin{table}[h!]
 	\centering
