Fourier-Trafo, Zusammenfassung & Ausblick geschrieben

--- a/0a_Abschlussbericht/src/bibfile.bib
+++ b/0a_Abschlussbericht/src/bibfile.bib
@@ -39,3 +39,11 @@
  publisher = {AIAA Inc., Washington, D.C and American Institute of Aeronautics~{and}~Astronautics},
  isbn = {1563476983}
 }
+
+@book{Bendat1986,
+	author = {Julius S. Bendat and Allan G. Piersol},
+	year = {1986},
+	title = {Random Data: Analysis and Measurement Procedures},
+	publisher = {John Wiley & Sons, Inc.},
+	isbn = {0-471-04000-2}
+}
