--- a/0a_Abschlussbericht/src/zusammenfassung.tex
+++ b/0a_Abschlussbericht/src/zusammenfassung.tex
@@ -1,4 +1,4 @@
-\chapter{Zusammenfassung und Ausblick}
+\chapter{Zusammenfassung und Ausblick}\label{chapter:Zusammenfassung}
 Abschließend lässt sich sagen, dass die Datenvorbereitung ein sehr wichtiger und auch zeitintensiver Teil der gesamten Arbeit 
 war. Die richtigen Messsignale aus der Fülle an Originaldaten zu finden und auf Plausibilität zu prüfen legt den Grundstein 
 für alle weiteren Schritte. Schwierig ist außerdem die Auswahl eines geeigneten Zeitbereichs zur Identifikation. 
